--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -13,9 +13,9 @@ services:
       - DATABASE_URL=sqlite+aiosqlite:///app/data/monitor_rpa.db
       - API_PREFIX=/api
       - DEBUG=False
-      - CORS_ORIGINS=http://rpa.italommf.com.br,https://rpa.italommf.com.br,http://31.97.250.190,https://31.97.250.190
+      - CORS_ORIGINS=http://rpa.italommf.com.br,https://rpa.italommf.com.br,http://31.97.250.190,http://rpa.italommf.com.br:8080
     ports:
-      - "8000:8000"
+      - "8081:8000"
 
   frontend:
     build:
@@ -24,6 +24,6 @@ services:
     container_name: monitor-rpa-frontend
     restart: always
     ports:
-      - "80:80"
+      - "8080:80"
     depends_on:
       - backend
